# Strawberry335

./: .gitignore  README  README.md  revisiondefines.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/platform/unix/: settings.cmake
dep/: CMakeLists.txt
dep/g3dlite/include/G3D/: GMutex.h
dep/jemalloc/include/jemalloc/: jemalloc_defs.h
sql/base/: auth_database.sql  characters_database.sql  log_database.sql  logon_database.sql
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.rc
src/server/authserver/Authentication/: AuthCodes.h
src/server/authserver/PrecompiledHeaders/: authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h
src/server/collision/: BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  VMapDefinitions.h
src/server/collision/Management/: VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIImpl.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h  AchievementMgrAdditions.cpp
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/Battlefields/: Battlefield.cpp  Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h  CMakeLists.txt
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamMgr.cpp  ArenaTeamMgr.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h  CMakeLists.txt
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Combat/: ThreatManager.cpp
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/DataBase/: WorldRebase.cpp  WorldRebase.h
src/server/game/DataStores/: DBCStores.cpp  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Entities/: CMakeLists.txt
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: ObjectGridLoader.cpp
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildMgr.h
src/server/game/Handlers/: AddonHandler.cpp  AuctionHouseHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  BattlefieldHandler.cpp  CalendarHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  ReferAFriendHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TicketHandler.cpp  TradeHandler.cpp  VehicleHandler.cpp  VoiceChatHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp  Mail.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapManager.cpp  MapManager.h  MapRelations.h  TransportMgr.cpp  TransportMgr.h
src/server/game/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
src/server/game/Movement/: MotionMaster.cpp
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPMgr.h
src/server/game/Pool/: PoolSession.cpp  PoolSessionMgr.cpp  PoolSessionMgr.h  PoolSocket.cpp  PoolSocketMgr.cpp
src/server/game/Pools/: PoolMgr.cpp
src/server/game/PrecompiledHeaders/: gamePCH.h
src/server/game/Reputation/: ReputationMgr.cpp  ReputationMgr.h  ReputationMgrAdditions.cpp
src/server/game/Scripting/: MapScripts.cpp  ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocketMgr.cpp
src/server/game/Skills/: SkillDiscovery.cpp
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellMgr.h  SpellScript.cpp  SpellScript.h
src/server/game/Survey/: Survey.cpp  Survey.h
src/server/game/Texts/: CreatureTextMgr.cpp  CreatureTextMgr.h
src/server/game/Tools/: PlayerDump.cpp
src/server/game/Transmog/: PlayerTransmog.cpp  PlayerTransmog.h  TransmogCondition.cpp  TransmogCondition.h  TransmogCost.cpp  TransmogCost.h  TransmogMgr.cpp  TransmogMgr.h
src/server/game/Warden/: WardenHandler.cpp  WardenHandler.h
src/server/game/Weather/: WeatherMgr.cpp
src/server/game/World/: World.cpp  World.h  WorldHelper.cpp  WorldHelper.h
src/server/logon/: CMakeLists.txt
src/server/logon/Accounts/: AccountMgr.cpp
src/server/logon/Achievements/: AchievementMgr.h  (+1 more)
src/server/logonserver/: CMakeLists.txt  Main.cpp  Master.cpp  logonserver.conf.dist  logonserver.rc
src/server/logonserver/CommandLine/: CliRunnable.cpp
src/server/logonserver/LogonThread/: LogonRunnable.cpp
src/server/logonserver/PrecompiledHeaders/: logonPCH.cpp  logonPCH.h
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  ClusterDefines.h  Common.h  Containers.h  SystemConfig.h  revision.cpp  revision.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  worldserver.conf.dist  worldserver.rc
src/tools/map_extractor/: System.cpp  mpq_libmpq.cpp  mpq_libmpq04.h
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: mpq_libmpq04.h
(+948 files in other folders)
